--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
 		<swagger.version>2.2.2</swagger.version>
 		<mybatis.boot.version>1.3.0</mybatis.boot.version>
 		<druid.version>1.1.0</druid.version>
+		<pagehelper.version>1.1.2</pagehelper.version>
 	</properties>
 	
 	<dependencies>
@@ -51,6 +52,12 @@
 		    <version>${mybatis.boot.version}</version>
 		</dependency>
 		
+		<dependency>
+		    <groupId>com.github.pagehelper</groupId>
+		    <artifactId>pagehelper-spring-boot-starter</artifactId>
+		    <version>${pagehelper.version}</version>
+		</dependency>
+
 		<dependency>
 		    <groupId>com.alibaba</groupId>
 		    <artifactId>druid</artifactId>
