--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,29 @@ server:
   context-path: /ssd
   port: 8090
 
-spring:
+primary: 
+  datasource:
+    url: jdbc:mysql://192.168.1.142:3306/main_smmsdemo
+    username: root
+    password: root
+    # 使用druid数据源
+    type: com.alibaba.druid.pool.DruidDataSource
+    driver-class-name: com.mysql.jdbc.Driver
+    filters: stat
+    maxActive: 20
+    initialSize: 1
+    maxWait: 60000
+    minIdle: 1
+    timeBetweenEvictionRunsMillis: 60000
+    minEvictableIdleTimeMillis: 300000
+    validationQuery: select 'x'
+    testWhileIdle: true
+    testOnBorrow: false
+    testOnReturn: false
+    poolPreparedStatements: true
+    maxOpenPreparedStatements: 20
+
+secondary: 
   datasource:
     url: jdbc:mysql://192.168.1.142:3306/main_smmsdemo
     username: root
@@ -24,6 +46,12 @@ spring:
     poolPreparedStatements: true
     maxOpenPreparedStatements: 20
       
-mybatis: 
-  mapperLocations: classpath:mapper/*.xml
-  typeAliasesPackage: com.sizatn.ssd.entity
+#mybatis: 
+#  mapperLocations: classpath:mapper/*.xml
+#  typeAliasesPackage: com.sizatn.ssd.entity
+
+#pagehelper:
+#    helperDialect: mysql
+#    reasonable: true
+#    supportMethodsArguments: true
+#    params: count=countSql
