--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
 		<mybatis.boot.version>1.3.0</mybatis.boot.version>
 		<druid.version>1.1.0</druid.version>
 		<pagehelper.version>1.1.2</pagehelper.version>
+		<mapper.version>3.4.2</mapper.version>
 	</properties>
 	
 	<dependencies>
@@ -56,6 +57,12 @@
 		    <groupId>com.github.pagehelper</groupId>
 		    <artifactId>pagehelper-spring-boot-starter</artifactId>
 		    <version>${pagehelper.version}</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>tk.mybatis</groupId>
+    		<artifactId>mapper</artifactId>
+		    <version>${mapper.version}</version>
 		</dependency>
 
 		<dependency>
