--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,8 @@
 		<druid.version>1.1.0</druid.version>
 		<pagehelper.version>1.1.2</pagehelper.version>
 		<mapper.version>3.4.2</mapper.version>
+		<redis.version>1.4.7.RELEASE</redis.version>
+		<netty.version>4.0.50.Final</netty.version>
 	</properties>
 	
 	<dependencies>
@@ -56,6 +58,22 @@
 		    <groupId>mysql</groupId>
 		    <artifactId>mysql-connector-java</artifactId>
 		</dependency>
+
+		<dependency>
+	        <groupId>io.projectreactor</groupId>
+	        <artifactId>reactor-core</artifactId>
+	    </dependency>
+	    
+	    <dependency>
+		    <groupId>io.projectreactor</groupId>
+		    <artifactId>reactor-net</artifactId>
+		</dependency>
+		
+		<dependency>
+		    <groupId>io.netty</groupId>
+		    <artifactId>netty-all</artifactId>
+		    <version>${netty.version}</version>
+		</dependency>
 		
 		<dependency>
 		    <groupId>org.mybatis.spring.boot</groupId>
@@ -73,6 +91,12 @@
 		    <groupId>tk.mybatis</groupId>
     		<artifactId>mapper</artifactId>
 		    <version>${mapper.version}</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-redis</artifactId>
+		    <version>${redis.version}</version>
 		</dependency>
 
 		<dependency>
