--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,61 +1,3 @@
-server: 
-  context-path: /ssd
-  port: 8090
-
-primary: 
-  datasource:
-    url: jdbc:mysql://192.168.1.139:3306/main_smmsdemo
-    username: root
-    password: root
-    # 使用druid数据源
-    type: com.alibaba.druid.pool.DruidDataSource
-    driver-class-name: com.mysql.jdbc.Driver
-    filters: stat
-    maxActive: 20
-    initialSize: 1
-    maxWait: 60000
-    minIdle: 1
-    timeBetweenEvictionRunsMillis: 60000
-    minEvictableIdleTimeMillis: 300000
-    validationQuery: select 'x'
-    testWhileIdle: true
-    testOnBorrow: false
-    testOnReturn: false
-    poolPreparedStatements: true
-    maxOpenPreparedStatements: 20
-
-secondary: 
-  datasource:
-    url: jdbc:mysql://200.20.2.103:3306/target_smmsdemo
-    username: root
-    password: root
-    # 使用druid数据源
-    type: com.alibaba.druid.pool.DruidDataSource
-    driver-class-name: com.mysql.jdbc.Driver
-    filters: stat
-    maxActive: 20
-    initialSize: 1
-    maxWait: 60000
-    minIdle: 1
-    timeBetweenEvictionRunsMillis: 60000
-    minEvictableIdleTimeMillis: 300000
-    validationQuery: select 'x'
-    testWhileIdle: true
-    testOnBorrow: false
-    testOnReturn: false
-    poolPreparedStatements: true
-    maxOpenPreparedStatements: 20
-      
-#mybatis: 
-#  mapperLocations: classpath:mapper/*.xml
-#  typeAliasesPackage: com.sizatn.ssd.entity
-
-pagehelper: 
-  helperDialect: mysql
-  reasonable: true
-  supportMethodsArguments: true
-  params: count=countSql
-    
-logging: 
-  level: debug
-    
+spring: 
+  profiles: 
+    active: dev
