--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -2,49 +2,27 @@ server:
   context-path: /ssd
   port: 8090
 
-primary: 
-  datasource:
-    url: jdbc:mysql://192.168.1.139:3306/main_smmsdemo
-    username: root
-    password: root
-    # 使用druid数据源
-    #type: com.alibaba.druid.pool.DruidDataSource
-    #driverClassName: com.mysql.jdbc.Driver
-    #filters: stat
-    #maxActive: 20
-    #initialSize: 1
-    #maxWait: 60000
-    #minIdle: 1
-    #timeBetweenEvictionRunsMillis: 60000
-    #minEvictableIdleTimeMillis: 300000
-    #validationQuery: select 'x'
-    #testWhileIdle: true
-    #testOnBorrow: false
-    #testOnReturn: false
-    #poolPreparedStatements: true
-    #maxOpenPreparedStatements: 20
-
-secondary: 
-  datasource:
-    url: jdbc:mysql://200.20.2.103:3306/target_smmsdemo
-    username: root
-    password: root
-    # 使用druid数据源
-    #type: com.alibaba.druid.pool.DruidDataSource
-    #driverClassName: com.mysql.jdbc.Driver
-    #filters: stat
-    #maxActive: 20
-    #initialSize: 1
-    #maxWait: 60000
-    #minIdle: 1
-    #timeBetweenEvictionRunsMillis: 60000
-    #minEvictableIdleTimeMillis: 300000
-    #validationQuery: select 'x'
-    #testWhileIdle: true
-    #testOnBorrow: false
-    #testOnReturn: false
-    #poolPreparedStatements: true
-    #maxOpenPreparedStatements: 20
+spring: 
+  datasource: 
+    primary: 
+      url: jdbc:mysql://192.168.1.139:3306/main_smmsdemo
+      username: root
+      password: root
+      driver-class-name: com.mysql.jdbc.Driver
+    secondary: 
+      url: jdbc:mysql://200.20.2.103:3306/target_smmsdemo
+      username: root
+      password: root
+      driver-class-name: com.mysql.jdbc.Driver
+  http: 
+    encoding: 
+      charset: UTF-8
+    jackson: 
+      date-format: yyyy-MM-dd HH:mm:ss 
+      timeZone: Asia/Shanghai
+    resources: 
+      chain: 
+        enabled: true
       
 #mybatis: 
 #  mapperLocations: classpath:mapper/*.xml
@@ -59,14 +37,3 @@ pagehelper:
 logging: 
   config: classpath:logback-boot.xml
   
-spring: 
-  http: 
-    encoding: 
-      charset: UTF-8
-    jackson: 
-      date-format: yyyy-MM-dd HH:mm:ss 
-      timeZone: Asia/Shanghai
-    resources: 
-      chain: 
-        enabled: true
-
