--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
 		<java.version>1.8</java.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<swagger.version>2.2.2</swagger.version>
-		<mybatis.boot.version>1.3.0</mybatis.boot.version>
+		<mybatis.boot.version>1.3.1</mybatis.boot.version>
 		<druid.version>1.1.0</druid.version>
 		<pagehelper.version>1.1.2</pagehelper.version>
 		<mapper.version>3.4.2</mapper.version>
@@ -141,7 +141,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
-		<finalName>springboot-swagger-demo</finalName>
+		<finalName>ssd</finalName>
 	</build>
 
 </project>
