--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
 		<redis.version>1.4.7.RELEASE</redis.version>
 		<netty.version>4.0.50.Final</netty.version>
 		<commons.lang3.version>3.6</commons.lang3.version>
+		<redis.boot.version>1.4.7.RELEASE</redis.boot.version>
 	</properties>
 
 	<dependencies>
@@ -125,6 +126,12 @@
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
 			<version>${commons.lang3.version}</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-redis</artifactId>
+		    <version>${redis.boot.version}</version>
 		</dependency>
 
 		<dependency>
