--- a/src/main/resources/application-pro.yml
+++ b/src/main/resources/application-pro.yml
@@ -2,54 +2,57 @@ server:
   context-path: /ssd
   port: 8090
 
-spring: 
+primary: 
   datasource:
-    primary:  
-      url: jdbc:mysql://192.168.43.132:3306/main_smmsdemo
-      username: root
-      password: root
-      driverClassName: com.mysql.jdbc.Driver
-      # 使用druid数据源
-      #type: com.alibaba.druid.pool.DruidDataSource
-      filters: stat
-      maxActive: 10
-      initialSize: 1
-      maxWait: 60000
-      minIdle: 5
-      timeBetweenEvictionRunsMillis: 60000
-      minEvictableIdleTimeMillis: 300000
-      validationQuery: select 'x'
-      testWhileIdle: true
-      testOnBorrow: false
-      testOnReturn: false
-      poolPreparedStatements: true
-      maxOpenPreparedStatements: 20
-    secondary: 
-      url: jdbc:mysql://192.168.43.132:3306/target_smmsdemo
-      username: root
-      password: root
-      driverClassName: com.mysql.jdbc.Driver
-      # 使用druid数据源
-      #type: com.alibaba.druid.pool.DruidDataSource
-      filters: stat
-      maxActive: 10
-      initialSize: 1
-      maxWait: 60000
-      minIdle: 5
-      timeBetweenEvictionRunsMillis: 60000
-      minEvictableIdleTimeMillis: 300000
-      validationQuery: select 'x'
-      testWhileIdle: true
-      testOnBorrow: false
-      testOnReturn: false
-      poolPreparedStatements: true
-      maxOpenPreparedStatements: 20
+    url: jdbc:mysql://192.168.43.132:3306/main_smmsdemo
+    username: root
+    password: root
+    driverClassName: com.mysql.jdbc.Driver
+    # 使用druid数据源
+    #type: com.alibaba.druid.pool.DruidDataSource
+    filters: stat
+    maxActive: 10
+    initialSize: 1
+    maxWait: 60000
+    minIdle: 5
+    timeBetweenEvictionRunsMillis: 60000
+    minEvictableIdleTimeMillis: 300000
+    validationQuery: select 1 from dual
+    testWhileIdle: true
+    testOnBorrow: false
+    testOnReturn: false
+    poolPreparedStatements: true
+    maxOpenPreparedStatements: 20
+      
+secondary: 
+  datasource: 
+    url: jdbc:mysql://192.168.43.132:3306/target_smmsdemo
+    username: root
+    password: root
+    driverClassName: com.mysql.jdbc.Driver
+    # 使用druid数据源
+    #type: com.alibaba.druid.pool.DruidDataSource
+    filters: stat
+    maxActive: 10
+    initialSize: 1
+    maxWait: 60000
+    minIdle: 5
+    timeBetweenEvictionRunsMillis: 60000
+    minEvictableIdleTimeMillis: 300000
+    validationQuery: select 1 from dual
+    testWhileIdle: true
+    testOnBorrow: false
+    testOnReturn: false
+    poolPreparedStatements: true
+    maxOpenPreparedStatements: 20
+
+spring: 
   http: 
     encoding: 
-      charset: UTF-8
+      charset: utf-8
     jackson: 
-      date-format: yyyy-MM-dd HH:mm:ss 
-      timeZone: Asia/Shanghai
+      date-format: yyyy-mm-dd hh:mm:ss 
+      timezone: asia/shanghai
     resources: 
       chain: 
         enabled: true
