--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -57,6 +57,17 @@ spring:
     type: EHCACHE
     ehcache: 
       config: classpath:ehcache.xml
+  dubbo: 
+    scan: com.sizatn.ssd.dubbo
+
+dubbo: 
+  applicationName: provider
+  registryProtocol: zookeeper
+  registryAddress: 200.20.2.160
+  registryPort: 2181
+  scan: com.sizatn.ssd.dubbo
+  protocolName: dubbo
+  protocolPort: 20880
       
 #mybatis: 
 #  mapperLocations: classpath:mapper/*.xml
