--- a/src/main/resources/application-pro.yml
+++ b/src/main/resources/application-pro.yml
@@ -71,7 +71,18 @@ spring:
       # Name of Redis server.
       master:
       # Comma-separated list of host:port pairs. 
-      nodes: 
+      nodes:
+  dubbo: 
+    scan: com.sizatn.ssd.dubbo
+
+dubbo: 
+  applicationName: provider
+  registryProtocol: zookeeper
+  registryAddress: 200.20.2.160
+  registryPort: 2181
+  scan: com.sizatn.ssd.dubbo
+  protocolName: dubbo
+  protocolPort: 20880
       
 #mybatis: 
 #  mapperLocations: classpath:mapper/*.xml
