--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
 		<commons.lang3.version>3.6</commons.lang3.version>
 		<redis.boot.version>1.4.7.RELEASE</redis.boot.version>
 		<shiro.version>1.4.0</shiro.version>
+		<dubbo.boot.version>1.0.0</dubbo.boot.version>
 	</properties>
 
 	<dependencies>
@@ -142,6 +143,12 @@
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
 			<version>${commons.lang3.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>io.dubbo.springboot</groupId>
+			<artifactId>spring-boot-starter-dubbo</artifactId>
+			<version>${dubbo.boot.version}</version>
 		</dependency>
 
 		<dependency>
