--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
 		<redis.boot.version>1.4.7.RELEASE</redis.boot.version>
 		<shiro.version>1.4.0</shiro.version>
 		<dubbo.boot.version>1.0.0</dubbo.boot.version>
+		<guava.version>23.6-jre</guava.version>
 	</properties>
 
 	<dependencies>
@@ -149,6 +150,12 @@
 			<groupId>io.dubbo.springboot</groupId>
 			<artifactId>spring-boot-starter-dubbo</artifactId>
 			<version>${dubbo.boot.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>${guava.version}</version>
 		</dependency>
 
 		<dependency>
