--- a/pom.xml
+++ b/pom.xml
@@ -128,6 +128,12 @@
 			<artifactId>druid</artifactId>
 			<version>${druid.version}</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>fastjson</artifactId>
+			<version>1.2.47</version>
+		</dependency>
 
 		<dependency>
 			<groupId>io.springfox</groupId>
