--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.5.6.RELEASE</version>
+		<version>2.0.1.RELEASE</version>
 	</parent>
 
 	<properties>
@@ -84,10 +84,10 @@
 			<artifactId>reactor-core</artifactId>
 		</dependency>
 
-		<dependency>
+		<!-- <dependency>
 			<groupId>io.projectreactor</groupId>
 			<artifactId>reactor-net</artifactId>
-		</dependency>
+		</dependency> -->
 
 		<dependency>
 			<groupId>net.sf.ehcache</groupId>
