--- a/pom.xml
+++ b/pom.xml
@@ -18,14 +18,12 @@
 	<properties>
 		<java.version>1.8</java.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<swagger.version>2.2.2</swagger.version>
+		<swagger.version>2.8.0</swagger.version>
 		<mybatis.boot.version>1.3.1</mybatis.boot.version>
 		<druid.version>1.1.0</druid.version>
-		<pagehelper.version>1.1.2</pagehelper.version>
+		<pagehelper.version>1.2.3</pagehelper.version>
 		<mapper.version>3.4.2</mapper.version>
 		<redis.version>1.4.7.RELEASE</redis.version>
-		<netty.version>4.0.50.Final</netty.version>
-		<commons.lang3.version>3.6</commons.lang3.version>
 		<redis.boot.version>1.4.7.RELEASE</redis.boot.version>
 		<shiro.version>1.4.0</shiro.version>
 		<dubbo.boot.version>1.0.0</dubbo.boot.version>
@@ -84,11 +82,6 @@
 			<artifactId>reactor-core</artifactId>
 		</dependency>
 
-		<!-- <dependency>
-			<groupId>io.projectreactor</groupId>
-			<artifactId>reactor-net</artifactId>
-		</dependency> -->
-
 		<dependency>
 			<groupId>net.sf.ehcache</groupId>
 			<artifactId>ehcache</artifactId>
@@ -102,7 +95,6 @@
 		<dependency>
 			<groupId>io.netty</groupId>
 			<artifactId>netty-all</artifactId>
-			<version>${netty.version}</version>
 		</dependency>
 
 		<dependency>
@@ -128,7 +120,7 @@
 			<artifactId>druid</artifactId>
 			<version>${druid.version}</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>com.alibaba</groupId>
 			<artifactId>fastjson</artifactId>
@@ -149,7 +141,6 @@
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
-			<version>${commons.lang3.version}</version>
 		</dependency>
 
 		<dependency>
@@ -165,11 +156,20 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-pool2</artifactId>
+		</dependency>
+
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<scope>test</scope>
 		</dependency>
-
+		
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
