--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
 		<shiro.version>1.4.0</shiro.version>
 		<dubbo.boot.version>1.0.0</dubbo.boot.version>
 		<guava.version>23.6-jre</guava.version>
+		<jwt.version>3.4.0</jwt.version>
 	</properties>
 
 	<dependencies>
@@ -161,14 +162,15 @@
 		</dependency>
 
 		<dependency>
+			<groupId>com.auth0</groupId>
+			<artifactId>java-jwt</artifactId>
+			<version>${jwt.version}</version>
+		</dependency>
+
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<scope>test</scope>
-		</dependency>
-		
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-log4j12</artifactId>
 		</dependency>
 	</dependencies>
 
