--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<swagger.version>2.8.0</swagger.version>
 		<mybatis.boot.version>1.3.1</mybatis.boot.version>
-		<druid.version>1.1.0</druid.version>
+		<druid.starter.version>1.1.10</druid.starter.version>
 		<pagehelper.version>1.2.3</pagehelper.version>
 		<mapper.version>3.4.2</mapper.version>
 		<redis.version>1.4.7.RELEASE</redis.version>
@@ -118,8 +118,8 @@
 
 		<dependency>
 			<groupId>com.alibaba</groupId>
-			<artifactId>druid</artifactId>
-			<version>${druid.version}</version>
+			<artifactId>druid-spring-boot-starter</artifactId>
+			<version>${druid.starter.version}</version>
 		</dependency>
 
 		<dependency>
@@ -165,6 +165,12 @@
 			<groupId>com.auth0</groupId>
 			<artifactId>java-jwt</artifactId>
 			<version>${jwt.version}</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.17</version>
 		</dependency>
 
 		<dependency>
